# drought-monitor

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .prettierrc  Dockerfile  LICENSE  README.md  app.py  create_gcp_wif_pool.sh  environment.yml  next.config.js  package-lock.json  package.json  requirements.txt
.github/workflows/: deploy-site.yml  gcp-cloud-run-deploy.yml  gcsfuse-generate-zarr.yml  generate-wb-zarr-gcsfuse.yml  generate-wb-zarr.yml  nextjs.yml  test-wif.yml  (+2 more)
app/: .dockerignore  Dockerfile  docker-compose.yml  drought.py  other_plotting_methods.py  requirements.txt  test.py  utils.py
data_processing/: Dockerfile  drought_to_zarr.py  drought_to_zarr_gcsfuse.py  drought_to_zarr_local.py  requirements.txt
drought_map/: build.sh  next.config.js  package-lock.json  package.json  pyproject.toml
drought_map/components/map/: index.js  router.js  time-warning.js  zoom-reset.js
drought_map/components/sidebar/: expanding-section.js  index.js  overlays.js
drought_map/components/sidebar/charts/: bar-chart.js  density-plot.js  index.js  timeseries.js
drought_map/components/view/: desktop.js  mobile.js
drought_map/pages/: _app.js  _document.js  index.js  meta.js
drought_map/src/drought_map/: __init__.py
drought_map/src/drought_map/www/: main.js
drought_map/src/drought_map/www/404/: index.html
drought_map/src/drought_map/www/_next/static/chunks/pages/: _app-00e4fc464bc47d55.js  meta-9466af182f11cd39.js
drought_map/src/drought_map/www/meta/: index.html
pages/: _app.js  _document.js  index.js  meta.js  stylesheet.css
utils/: helpers.py
(+58 files in other folders)
