[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shiny-drought-map"
version = "0.1.0"
description = "A reusable Shiny custom component for drought map visualization"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "jakidxav"}]
dependencies = ["shiny>=1.2.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# include all files inside the 'www' folder of the 'drought_map' package.
drought_map = ["www/**/*"]